--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,7 +8,16 @@ http {
 
     server {
         listen 80;
-        server_name localhost;  # Замените на ваш домен, если требуется
+        server_name shorty.su www.shorty.su;
+        return 301 https://$host$request_uri;  # Перенаправление HTTP -> HTTPS
+    }
+
+    server {
+        listen 443 ssl;
+        server_name shorty.su www.shorty.su;
+
+        ssl_certificate /etc/letsencrypt/live/shorty.su/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/shorty.su/privkey.pem;
 
         add_header 'Access-Control-Allow-Origin' *;
         add_header 'Access-Control-Allow-Origin' 'http://localhost:5173';
