--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,7 +9,7 @@ http {
     server {
         listen 80;
         server_name shorty.su www.shorty.su;
-        return 301 https://$host$request_uri;  # Перенаправление HTTP -> HTTPS
+        # return 301 https://$host$request_uri;  # Перенаправление HTTP -> HTTPS
     }
 
     server {
