--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,16 +8,27 @@ http {
 
     server {
         listen 80;
+        listen [::]:80;
         server_name shorty.su www.shorty.su;
-        # return 301 https://$host$request_uri;  # Перенаправление HTTP -> HTTPS
+        return 301 https://$host$request_uri;  # Перенаправление HTTP -> HTTPS
     }
 
     server {
         listen 443 ssl;
+        listen [::]:443 ssl;
         server_name shorty.su www.shorty.su;
 
         ssl_certificate /etc/letsencrypt/live/shorty.su/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/shorty.su/privkey.pem;
+
+        # Configure SSL settings according to your needs
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+
+        # Configure additional security options according to your needs
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         add_header 'Access-Control-Allow-Origin' *;
         add_header 'Access-Control-Allow-Origin' 'http://localhost:5173';
