--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -18,8 +18,8 @@ http {
         listen [::]:443 ssl;
         server_name shorty.su www.shorty.su;
 
-        ssl_certificate /etc/letsencrypt/live/shorty.su/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/shorty.su/privkey.pem;
+        ssl_certificate /etc/nginx/certs/fullchain.pem;
+        ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         # Configure SSL settings according to your needs
         ssl_protocols TLSv1.2 TLSv1.3;
