--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,35 +9,8 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name shorty.su www.shorty.su;
-        return 301 https://$host$request_uri;  # Перенаправление HTTP -> HTTPS
-    }
-
-    server {
-        listen 443 ssl;
-        listen [::]:443 ssl;
-        server_name shorty.su www.shorty.su;
-
-        ssl_certificate /etc/nginx/certs/fullchain.pem;
-        ssl_certificate_key /etc/nginx/certs/privkey.pem;
-
-        # Configure SSL settings according to your needs
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-
-        # Configure additional security options according to your needs
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-
-        add_header 'Access-Control-Allow-Origin' *;
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:5173';
-
-        location /link/ {
-            proxy_pass http://backend:8080/api/;
-            proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_set_header Host $http_host;
-        }
+        server_name shorty.su www.shorty.su localhost;
+        # return 301 https://$host$request_uri;  # Перенаправление HTTP -> HTTPS
 
         location / {
             root /usr/share/nginx/html;  # Убедитесь, что это правильный путь
@@ -46,6 +19,39 @@ http {
             add_header Cache-Control no-store;
             expires -1;
         }
+
+               location /link/ {
+            proxy_pass http://backend:8080/api/;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Host $http_host;
+        }
+    }
+
+    server {
+        listen 443;
+        # listen [::]:443;
+        server_name shorty.su www.shorty.su;
+        return 301 http://$host$request_uri;
+
+        # listen 443 ssl;
+        # listen [::]:443 ssl;
+        # server_name shorty.su www.shorty.su;
+
+        # ssl_certificate /etc/nginx/certs/fullchain.pem;
+        # ssl_certificate_key /etc/nginx/certs/privkey.pem;
+
+        # # Configure SSL settings according to your needs
+        # ssl_protocols TLSv1.2 TLSv1.3;
+        # ssl_prefer_server_ciphers on;
+        # ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+
+        # # Configure additional security options according to your needs
+        # ssl_session_cache shared:SSL:10m;
+        # ssl_session_timeout 10m;
+
+        add_header 'Access-Control-Allow-Origin' *;
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:5173';
+
 
         # Кэширование статических файлов и установка правильных MIME-типов
         location ~* \.(css|png|jpg|jpeg|gif|ico|svg)$ {
